test/corpus/records.txt
================
Empty record
================
val _ = {}
----------------

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (record_expression)))))

================
One-field record
================
val _ = {x=1}
----------------

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (record_expression
          (record_row
            (identifier_label
              (identifier))
            (integer_literal)))))))

================
One-field selector record
================
val _ = { 1 = 1 }
----------------

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (record_expression
          (record_row
            (int_label
              (index))
            (integer_literal)))))))

================
Two-field record
================
val _ = { x = 1, y = 2 }

---------

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (record_expression
          (record_row
            (identifier_label
              (identifier))
            (integer_literal))
          (record_row
            (identifier_label
              (identifier))
            (integer_literal)))))))

================
ID vs Ident
================
val _ = { * = 1 }

---------

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (record_expression
          (record_row
            (identifier_label
              (identifier))
            (integer_literal)))))))
